@@ -1,0 +1,65 @@
+/* gmp-mparam.h -- Compiler/machine parameter header file.
+
+Copyright 1991, 1993, 1994, 1999, 2000, 2001, 2002 Free Software Foundation,
+Inc.
+
+This file is part of the GNU MP Library.
+
+The GNU MP Library is free software; you can redistribute it and/or modify it
+under the terms of the GNU Lesser General Public License as published by the
+Free Software Foundation; either version 2.1 of the License, or (at your
+option) any later version.
+
+The GNU MP Library is distributed in the hope that it will be useful, but
+WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+FITNESS FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License
+for more details.
+
+You should have received a copy of the GNU Lesser General Public License along
+with the GNU MP Library; see the file COPYING.LIB.  If not, write to the Free
+Software Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307,
+USA. */
+
+
+#define BITS_PER_MP_LIMB 32
+#define BYTES_PER_MP_LIMB 4
+
+
+/* Generated by tuneup.c, 2002-02-17, system compiler (R3000) */
+
+#define KARATSUBA_MUL_THRESHOLD          18
+#define TOOM3_MUL_THRESHOLD              65
+
+#define BASECASE_SQR_THRESHOLD           12
+#define KARATSUBA_SQR_THRESHOLD          49
+#define TOOM3_SQR_THRESHOLD              56
+
+#define SB_PREINV_THRESHOLD           MP_SIZE_T_MAX  /* never */
+#define DC_THRESHOLD                     29
+#define POWM_THRESHOLD                  146
+
+#define GCD_ACCEL_THRESHOLD               3
+#define GCDEXT_THRESHOLD                 47
+#define JACOBI_BASE_METHOD                2
+
+#define DIVREM_1_NORM_THRESHOLD       MP_SIZE_T_MAX  /* never */
+#define DIVREM_1_UNNORM_THRESHOLD     MP_SIZE_T_MAX  /* never */
+#define MOD_1_NORM_THRESHOLD          MP_SIZE_T_MAX  /* never */
+#define MOD_1_UNNORM_THRESHOLD        MP_SIZE_T_MAX  /* never */
+#define USE_PREINV_DIVREM_1               0
+#define USE_PREINV_MOD_1                  0
+#define DIVREM_2_THRESHOLD            MP_SIZE_T_MAX  /* never */
+#define DIVEXACT_1_THRESHOLD              0  /* always */
+#define MODEXACT_1_ODD_THRESHOLD          0  /* always */
+
+#define GET_STR_BASECASE_THRESHOLD       11
+#define GET_STR_PRECOMPUTE_THRESHOLD     17
+#define SET_STR_THRESHOLD              3014
+
+#define FFT_MUL_TABLE  { 496, 928, 1664, 4608, 14336, 40960, 0 }
+#define FFT_MODF_MUL_THRESHOLD          624
+#define FFT_MUL_THRESHOLD              4864
+
+#define FFT_SQR_TABLE  { 464, 800, 1664, 3584, 10240, 40960, 0 }
+#define FFT_MODF_SQR_THRESHOLD          496
+#define FFT_SQR_THRESHOLD              4352
